add hubot-mock-adapter dependency

--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
   },
   "homepage": "https://github.com/bouzuya/kakashi",
   "dependencies": {
-    "sinon": "^1.10.3",
+    "hubot-mock-adapter": "^1.0.0",
     "hubot": "^2.7.5",
-    "q": "^1.0.1"
+    "q": "^1.0.1",
+    "sinon": "^1.10.3"
   },
   "devDependencies": {
     "chai": "^1.9.1",
